# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: az-check.yml
gendiff/: __init__.py  engine.py  formatter.py  generate_diff_tree.py  parser.py
gendiff/formatters/: __init__.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/tests/: test_formatter.py  test_generate_diff.py  test_parser.py
gendiff/tests/test_files/: answer_nested_json.txt
